--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <!-- Title : Başlık -->
   <title>Ömer Karahan - Makine Mühendisi</title>
   <!-- Base : Başlangıç -->
-  <base href="{{ site.baseurl }}">
+  <base href="">
   <link rel="stylesheet" href="assets/sifirlama.css" type="text/css">
   <link rel="stylesheet" href="assets/stil.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:400,700" rel="stylesheet">
