--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
   <title>Ömer Karahan - Makine Mühendisi</title>
   <!-- Base : Başlangıç -->
   <base href="">
-  <link rel="stylesheet" href="assets/sifirlama.css" type="text/css">
-  <link rel="stylesheet" href="assets/stil.css" type="text/css">
+  <link rel="stylesheet" href="/assets/sifirlama.css" type="text/css">
+  <link rel="stylesheet" href="/assets/stil.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:400,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta : Anahtar Kelimeler -->
