--- a/_layouts/tekil.html
+++ b/_layouts/tekil.html
@@ -3,7 +3,7 @@ layout: varsayilan
 ---
 <!-- Sitenin sağ tarafı -->
 <section id="site-sag" class="sag-wrap">
-	<article id="yazi-id" >
+	<article id="yazi-id" class="tekil">
 	<header class="yazi-ustu">
 	<h2 class="yazi-basligi"><a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
 	</header>
