--- a/_layouts/tekil.html
+++ b/_layouts/tekil.html
@@ -5,7 +5,7 @@ layout: varsayilan
 <section id="site-sag" class="sag-wrap">
 	<article id="yazi-id" class="tekil">
 	<header class="yazi-ustu">
-	<h2 class="yazi-basligi"><a title="{{ page.title }}" href="{{ page.link }}">{% if page.headline %}{{ page.headline }}{% else %}{{ page.title }}{% endif %} </h2>
+	<h2 class="yazi-basligi"><a title="{{ page.title }}" href="{{ page.link }}">{% if page.headline %}{{ page.headline }}{% else %}{{ page.title }}{% endif %}</a></h2>
 	</header>
 	<div class="yazi-icerigi">
 	{{content}}
