--- a/_layouts/varsayilan.html
+++ b/_layouts/varsayilan.html
@@ -5,7 +5,7 @@
 <div id="site">
 	{% include header.html %}
 <div class="ana-wrap">
-<div id="site-icerigi">
+<div id="site-icerigi" role="main">
 	{% include sidebar.html %}
 	{{ content }}
 </div>
