--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="/assets/stil.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:400,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
+  <link rel="canonical" href="{{ canonical }}">
+  <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+
   <!-- Meta : Anahtar Kelimeler -->
   <meta name="keywords" content="makine,mühendislik,sakarya,akışkanlar,hidrolik,kaynak,döküm,alüminyum">
   <!-- Meta : İçerik -->
