--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,10 +17,12 @@
   {% if page.tags %}
   <meta itemprop="keywords" name="keywords" content="{{ page.tags | join: ', ' }}">
   {% endif %}
-  <!-- Google Doğrulaması -->
+  <!-- Doğrulamaları Yüklüyorum @Ruby-o3karahan -->
   <meta name="google-site-verification" content="{{ site.dogrulamalar.google }}" />
   <meta name="msvalidate.01" content="{{ site.dogrulamalar.bing }}" />
   <meta name="yandex-verification" content="{{ site.dogrulamalar.yandex }}" />
+  <!-- Seo ayarlarını aktarıyorum @Ruby-o3karahan -->
+  {% include kucuk-resim-ayarlari.html %}
   {% include seo-ayarlari.html %}
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
