--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,30 @@
+{% assign rawcats = "" %}
+{% for post in site.posts %}
+{% assign tcats = post.category | join:'|' | append:'|' %}
+{% assign rawcats = rawcats | append:tcats %}
+{% endfor %}
+{% assign rawcats = rawcats | split:'|' | sort %}
+{% assign cats = "" %}
+{% for cat in rawcats %}
+{% if cat != "" %}
+{% if cats == "" %}
+{% assign cats = cat | split:'|' %}
+{% endif %}
+{% unless cats contains cat %}
+{% assign cats = cats | join:'|' | append:'|' | append:cat | split:'|' %}
+{% endunless %}
+{% endif %}
+{% endfor %}
 <!-- Sitenin sol tarafı -->
-		<aside id="site-sol" class="sol-wrap">
-		<div class="widget">
-			<ul>
-			<li><a href="#">Hidrolik ve Pnömatik</a></li>
-			<li><a href="#">Kalıp Tasarımı</a></li>
-			<li><a href="#">Malzemeler</a></li>
-			<li><a href="#">Parça Çizimleri</a></li>
-			<li><a href="#">Diğer</a></li>
-			</ul>
-		</div>
+<aside id="site-sol" class="sol-wrap">
+<div class="widget">
+<ul>
+{% for ct in cats %}
+<li><a href="{{ site.url }}/kategoriler/#{{ ct | slugify }}">{{ ct }}</a></li>
+{% endfor %}
+<li><a href="{{ site.url }}/kategoriler/#diger">Diğer</a></li>
+</ul>
+</div>
 		<!-- GrabCAD profilim -->
 		<div class="widget widget-grabcad">
 		<div class="grabcad-projeleri">
