--- a/_layouts/anasayfa.html
+++ b/_layouts/anasayfa.html
@@ -3,7 +3,7 @@ layout: varsayilan
 ---
 <!-- Sitenin sağ tarafı -->
 <section id="site-sag" class="sag-wrap">
- {% for post in site.posts limit 5 %}
+ {% for post in paginator.posts %}
 	<article id="yazi-id" >
 	<header class="yazi-ustu">
 	<h2 class="yazi-basligi"><a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
@@ -13,7 +13,9 @@ layout: varsayilan
 	</div>
 	</article>
 	{% endfor %}
+	 {% if paginator.next_page %}
 	<footer class="devamini-goruntule">
-	<a class="devamini-goruntule-buton"><span class="ikon-saga-dogru"></span></a>
+	<a href="/sayfa/{{paginator.next_page}}" class="devamini-goruntule-buton"><span class="ikon-saga-dogru"></span></a>
 	</footer>
+	{% endif %}
 </section>
