--- a/assets/sifirlama.css
+++ b/assets/sifirlama.css
@@ -52,7 +52,7 @@ a {
 
 /* change colours to suit your needs */
 ins {
-    background-color:#ff9;
+    background-color:#fff;
     color:#000;
     text-decoration:none;
 }
