--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,14 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:400,700" rel="stylesheet">
   <meta name="HandheldFriendly" content="True">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
-  <link rel="canonical" href="{{ canonical }}">
+  <meta name="robots" content="index,follow">
+  {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}<link rel="canonical" href="{{ canonical }}">
   <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Beslemesi">
   <!-- Meta : Anahtar Kelimeler -->
   <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
-  {% if page.keywords %}
-  <meta itemprop="keywords" name="keywords" content="{{ page.keywords | join: ', ' }}">
-  {% endif %}
+  {% if page.keywords %}<meta itemprop="keywords" name="keywords" content="{{ page.keywords | join: ', ' }}">{% endif %}
   <!-- Doğrulamaları Yüklüyorum @Ruby-o3karahan -->
   <meta name="google-site-verification" content="{{ site.dogrulamalar.google }}" />
   <meta name="msvalidate.01" content="{{ site.dogrulamalar.bing }}" />
