--- a/_layouts/tekil.html
+++ b/_layouts/tekil.html
@@ -3,12 +3,15 @@ layout: varsayilan
 ---
 <!-- Sitenin sağ tarafı -->
 <section id="site-sag" class="sag-wrap">
-	<article id="yazi-{{ page.slug }}" class="tekil">
+<article id="yazi-{{ page.slug }}" class="tekil">
+<!-- Schema etiketlemesi yapıyorum -->
+<div itemscope itemtype="http://schema.org/Article" >
 	<header class="yazi-ustu">
 	<h2 class="yazi-basligi"><a title="{{ page.title }}" href="{{ page.link }}">{% if page.headline %}{{ page.headline }}{% else %}{{ page.title }}{% endif %}</a></h2>
 	</header>
 	<div class="yazi-icerigi">
 	{{content}}
 	</div>
-	</article>
+</div>
+</article>
 </section>
