--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,9 +20,5 @@
   <meta name="msvalidate.01" content="{{ site.dogrulamalar.bing }}" />
   <meta name="yandex-verification" content="{{ site.dogrulamalar.yandex }}" />
   <!-- Seo ayarlarını aktarıyorum @Ruby-o3karahan -->
-  {% include kucuk-resim-ayarlari.html %}
-  {% include seo-ayarlari.html %}
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+  {% include favicon.html %}{% include open-graph.html %}<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 </head>
