--- a/_layouts/varsayilan.html
+++ b/_layouts/varsayilan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/Article" lang="{{ page.lang | default: site.lang | default: 'tr' }}">
+<html lang="{{ page.lang | default: site.lang | default: 'tr' }}">
 {% include head.html %}
 <body id="site-govde">
 <div id="site">
