--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,6 @@
   <meta name="msvalidate.01" content="{{ site.dogrulamalar.bing }}" />
   <meta name="yandex-verification" content="{{ site.dogrulamalar.yandex }}" />
   <!-- Seo ayarlarını aktarıyorum @Ruby-o3karahan -->
-  {% include favicon.html %}{% include open-graph.html %}<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+  {% include favicon.html %}
+  {% include open-graph.html %}<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 </head>
