--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -1,10 +1,10 @@
-	<meta property="og:locale" content="{{ site_locale }}">
+	<meta property="og:locale" content="{{ site.locale }}">
 	{% if page.title %}<meta property="og:type" content="article">
-	<meta property="og:title" content="{{ page.title }} - {{ site.title }}">{% else %}
-	<meta property="og:type" content="website">{% endif %}
+	<meta property="og:title" content="{{ page.title }} - {{ site.title }}">{% else %}<meta property="og:type" content="website">{% endif %}
 	{% if site.title %}<meta property="og:site_name" content="{{ site.title }}">{% endif %}
 	<meta property="og:description" content="{% if page.meta_description %}{{ page.meta_description }}{% else %}{{ site.description }}{% endif %}">
+	{% if page.image %}<meta property="og:image" content="{{ 'yuklemeler/' | append: page.image | prepend: site.url }}">{% else %}<meta property="og:image" content="{{ site.url }}/{{ site.sahibi.resim }}">{% endif %}
+	{% if site.sahibi %}<meta property="article:author" content="{{ '' | prepend: site.url }}">{% endif %}
 	{% if page.url %}<meta property="og:url" content="{{ site.url }}{{ page.url }}">{% endif %}
 	{% if page.date %}<meta property="article:published_time" content="{{page.date | date_to_xmlschema}}">{% endif %}
-	{% if site.author %}<meta property="article:author" content="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">{% endif %}
-	{% if page.banner_image %}<meta property="og:image" content="{{ "/assets/images/" | append: page.banner_image | prepend: site.baseurl | prepend: site.url }}">{% endif %}
+	
