--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -4,7 +4,7 @@
 	{% if site.title %}<meta property="og:site_name" content="{{ site.title }}">{% endif %}
 	<meta property="og:description" content="{% if page.meta_description %}{{ page.meta_description }}{% else %}{{ site.description }}{% endif %}">
 	{% if page.image %}<meta property="og:image" content="{{ 'yuklemeler/' | append: page.image | prepend: site.url }}">{% else %}<meta property="og:image" content="{{ site.url }}/{{ site.sahibi.resim }}">{% endif %}
-	{% if site.sahibi %}<meta property="article:author" content="{{ '' | prepend: site.url }}">{% endif %}
+	{% if site.sahibi %}<meta property="article:author" content="{{ site.sahibi.google.plus_url }}">{% endif %}
 	{% if page.url %}<meta property="og:url" content="{{ site.url }}{{ page.url }}">{% endif %}
 	{% if page.date %}<meta property="article:published_time" content="{{page.date | date_to_xmlschema}}">{% endif %}
 	
