--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -2,7 +2,9 @@
 	{% if page.title %}<meta property="og:type" content="article">
 	<meta property="og:title" content="{{ page.title }} - {{ site.title }}">{% else %}<meta property="og:type" content="website">{% endif %}
 	{% if site.title %}<meta property="og:site_name" content="{{ site.title }}">{% endif %}
-	<meta property="og:description" content="{% if page.meta_description %}{{ page.meta_description }}{% else %}{{ site.description }}{% endif %}">
+	<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+	<meta property="og:image:width" content="200" />
+	<meta property="og:image:height" content="200" />
 	{% if page.image %}<meta property="og:image" content="{{ 'yuklemeler/' | append: page.image | prepend: site.url }}">{% else %}<meta property="og:image" content="{{ site.url }}/{{ site.sahibi.resim }}">{% endif %}
 	{% if site.sahibi %}<meta property="article:author" content="{{ site.sahibi.google.plus_url }}">{% endif %}
 	{% if page.url %}<meta property="og:url" content="{{ site.url }}{{ page.url }}">{% endif %}
