--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,25 +1,25 @@
 <head>
-  <meta charset="utf-8">
-  <!-- Title : Başlık -->
-  <title>{% if page.title %}{{ page.title }}{% else %} {{ site.title }} {% endif %}</title>
-  <!-- Base : Başlangıç -->
-  <base href="">
-  <link rel="stylesheet" href="{{ site.url }}/assets/sifirlama.css" type="text/css">
-  <link rel="stylesheet" href="{{ site.url }}/assets/stil.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:400,700" rel="stylesheet">
-  <meta name="HandheldFriendly" content="True">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index,follow">
-  {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}<link rel="canonical" href="{{ canonical }}">
-  <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Beslemesi">
-  <!-- Meta : Anahtar Kelimeler -->
-  <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
-  {% if page.keywords %}<meta itemprop="keywords" name="keywords" content="{{ page.keywords | join: ', ' }}">{% endif %}
-  <!-- Doğrulamaları Yüklüyorum @Ruby-o3karahan -->
-  <meta name="google-site-verification" content="{{ site.dogrulamalar.google }}" />
-  <meta name="msvalidate.01" content="{{ site.dogrulamalar.bing }}" />
-  <meta name="yandex-verification" content="{{ site.dogrulamalar.yandex }}" />
-  <!-- Seo ayarlarını aktarıyorum @Ruby-o3karahan -->
-  {% include favicon.html %}
-  {% include open-graph.html %}<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+<meta charset="utf-8">
+<!-- Title : Başlık -->
+<title>{% if page.title %}{{ page.title }}{% else %} {{ site.title }} {% endif %}</title>
+<!-- Base : Başlangıç -->
+<base href="">
+<link rel="stylesheet" href="{{ site.url }}/assets/sifirlama.css" type="text/css">
+<link rel="stylesheet" href="{{ site.url }}/assets/stil.css" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:400,700" rel="stylesheet">
+<meta name="HandheldFriendly" content="True">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index,follow">
+{% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}<link rel="canonical" href="{{ canonical }}">
+<link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Beslemesi">
+<!-- Meta : Anahtar Kelimeler -->
+{% if page.keywords %}<meta itemprop="keywords" name="keywords" content="{{ page.keywords | join: ', ' }}">{% else %}<meta itemprop="keywords" name="keywords" content="{{ site.keywords | join: ', ' }}">{% endif %}
+<meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
+<!-- Doğrulamaları Yüklüyorum @Ruby-o3karahan -->
+<meta name="google-site-verification" content="{{ site.dogrulamalar.google }}" />
+<meta name="msvalidate.01" content="{{ site.dogrulamalar.bing }}" />
+<meta name="yandex-verification" content="{{ site.dogrulamalar.yandex }}" />
+<!-- Seo ayarlarını aktarıyorum @Ruby-o3karahan -->
+{% include favicon.html %}
+{% include open-graph.html %}<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 </head>
