--- a/_layouts/varsayilan.html
+++ b/_layouts/varsayilan.html
@@ -5,6 +5,7 @@
 <div id="site">
 {% include header.html %}
 <div class="ana-wrap">
+{% include video.html %}
 <div id="site-icerigi" role="main">
 {% include sidebar.html %}
 {{ content }}
