--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,7 @@
 <title>{% if page.title %}{{ page.title }}{% else %} {{ site.title }} {% endif %}</title>
 <!-- Base : Başlangıç -->
 <base href="">
-<link rel="stylesheet" href="{{ site.url }}/assets/sifirlama.css" type="text/css">
-<link rel="stylesheet" href="{{ site.url }}/assets/stil.css" type="text/css">
+<link rel="stylesheet" href="{{ site.url }}/assets/birlestirilmis-stil.css" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:400,700" rel="stylesheet">
 <meta name="HandheldFriendly" content="True">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
