--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
 <meta name="robots" content="index,follow">
 {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}<link rel="canonical" href="{{ canonical }}">
 <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Beslemesi">
+<link rel="author" href="https://plus.google.com/115696628227205836104/posts">
 <!-- Meta : Anahtar Kelimeler -->
 {% if page.keywords %}<meta itemprop="keywords" name="keywords" content="{{ page.keywords | join: ', ' }}">{% else %}<meta itemprop="keywords" name="keywords" content="{{ site.keywords | join: ', ' }}">{% endif %}
 <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
@@ -20,5 +21,7 @@
 <meta name="yandex-verification" content="{{ site.dogrulamalar.yandex }}" />
 <!-- Seo ayarlarını aktarıyorum @Ruby-o3karahan -->
 {% include favicon.html %}
-{% include open-graph.html %}<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+{% include open-graph.html %}
+{% include analytics.html %}
+<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 </head>
