--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -1,6 +1,6 @@
 <meta property="og:locale" content="{{ site.locale }}">
 {% if page.title %}<meta property="og:type" content="article">
-<meta property="og:title" content="{{ page.title }} - {{ site.title }}">{% else %}<meta property="og:type" content="website">{% endif %}
+<meta property="og:title" content="{{ page.title }}">{% else %}<meta property="og:type" content="website">{% endif %}
 {% if site.title %}<meta property="og:site_name" content="{{ site.title }}">{% endif %}
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 <meta property="og:image:width" content="200" />
