--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,7 @@
 <!-- Seo ayarlarını aktarıyorum @Ruby-o3karahan -->
 {% include favicon.html %}
 {% include open-graph.html %}
+{% include twitter.html %}
 {% include analytics.html %}
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 </head>
