--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -5,7 +5,7 @@
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 <meta property="og:image:width" content="200" />
 <meta property="og:image:height" content="200" />
-{% if page.image %}<meta property="og:image" content="{{ 'yuklemeler/' | append: page.image | prepend: site.url }}">{% else %}<meta property="og:image" content="{{ site.url }}/{{ site.sahibi.resim }}">{% endif %}
+{% if page.image %}<meta property="og:image" content="{{ site.url }}/{{ page.image }}">{% else %}<meta property="og:image" content="{{ site.url }}/{{ site.sahibi.resim }}">{% endif %}
 {% if site.sahibi %}<meta property="article:author" content="{{ site.sahibi.google.plus_url }}">{% endif %}
 {% if page.url %}<meta property="og:url" content="{{ site.url }}{{ page.url }}">{% endif %}
 {% if page.date %}<meta property="article:published_time" content="{{page.date | date_to_xmlschema}}">{% endif %}
